Fixed display text-overflow and edit btn not working after equal btn

--- a/myServer/calculator/styles.css
+++ b/myServer/calculator/styles.css
@@ -22,6 +22,7 @@
     grid-column:1/6;
     background-color: burlywood;
     height: 1.5rem;
+    overflow: hidden;
 }
 
 #equal-btn{
